[gd_scene load_steps=20 format=3 uid="uid://cs2lwfn62oi11"]

[ext_resource type="Texture2D" uid="uid://djwj3gm4ydyet" path="res://images/yellow_paper.png" id="1_armi7"]
[ext_resource type="Script" uid="uid://core2kw26fx18" path="res://scripts/lock_screen.gd" id="1_yev20"]
[ext_resource type="Texture2D" uid="uid://dw7dlj04w4eb0" path="res://images/numbers/arrow.png" id="2_hplql"]
[ext_resource type="Texture2D" uid="uid://cdimtkfakb2a0" path="res://images/numbers/0.png" id="3_m20vr"]
[ext_resource type="Texture2D" uid="uid://0b6mvtb3bkj3" path="res://images/numbers/1.png" id="4_yev20"]
[ext_resource type="Texture2D" uid="uid://c6alvrurmr24b" path="res://images/numbers/2.png" id="5_chhh8"]
[ext_resource type="Texture2D" uid="uid://dmxpi47a0n15m" path="res://images/numbers/3.png" id="6_a12aj"]
[ext_resource type="Texture2D" uid="uid://bme53ipyu5jt1" path="res://images/numbers/4.png" id="7_b8pd3"]
[ext_resource type="Texture2D" uid="uid://cbmrfoee025cc" path="res://images/numbers/5.png" id="8_66q4x"]
[ext_resource type="Texture2D" uid="uid://dik4axrvy8j1o" path="res://images/numbers/6.png" id="9_w7iot"]
[ext_resource type="Texture2D" uid="uid://c7mtng7u202hc" path="res://images/numbers/7.png" id="10_nxfc0"]
[ext_resource type="Texture2D" uid="uid://cusg5s85geeex" path="res://images/numbers/8.png" id="11_w4yjk"]
[ext_resource type="Texture2D" uid="uid://dhm2weuc5tb66" path="res://images/numbers/9.png" id="12_vcuwb"]
[ext_resource type="Texture2D" uid="uid://gfc17dq42qql" path="res://images/numbers/check.png" id="14_chhh8"]
[ext_resource type="Texture2D" uid="uid://b846tfueob077" path="res://images/wrong_frames/wrong_fr1.png" id="15_66q4x"]
[ext_resource type="Texture2D" uid="uid://d22dxj3qijamx" path="res://images/wrong_frames/wrong_fr2.png" id="16_w7iot"]
[ext_resource type="Texture2D" uid="uid://c54pnf85icrff" path="res://images/wrong_frames/wrong_fr3.png" id="17_nxfc0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_r8x2f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_m20vr")
}, {
"duration": 1.0,
"texture": ExtResource("4_yev20")
}, {
"duration": 1.0,
"texture": ExtResource("5_chhh8")
}, {
"duration": 1.0,
"texture": ExtResource("6_a12aj")
}, {
"duration": 1.0,
"texture": ExtResource("7_b8pd3")
}, {
"duration": 1.0,
"texture": ExtResource("8_66q4x")
}, {
"duration": 1.0,
"texture": ExtResource("9_w7iot")
}, {
"duration": 1.0,
"texture": ExtResource("10_nxfc0")
}, {
"duration": 1.0,
"texture": ExtResource("11_w4yjk")
}, {
"duration": 1.0,
"texture": ExtResource("12_vcuwb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_w4yjk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_66q4x")
}, {
"duration": 1.0,
"texture": ExtResource("16_w7iot")
}, {
"duration": 1.0,
"texture": ExtResource("17_nxfc0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="LockScreen" type="Node2D"]
script = ExtResource("1_yev20")

[node name="YellowPaper" type="Sprite2D" parent="."]
position = Vector2(160, 142)
rotation = -0.08726646
texture = ExtResource("1_armi7")
metadata/_edit_lock_ = true

[node name="Puzzle" type="Node2D" parent="."]

[node name="UpArrow1" type="Node2D" parent="Puzzle"]
position = Vector2(-27, -42)

[node name="Arrow" type="Sprite2D" parent="Puzzle/UpArrow1"]
position = Vector2(251, 77)
scale = Vector2(0.43, 0.43)
texture = ExtResource("2_hplql")

[node name="Up1" type="Button" parent="Puzzle/UpArrow1"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
offset_left = 43.0
offset_top = 57.0
offset_right = 114.0
offset_bottom = 94.0
metadata/_edit_use_anchors_ = true

[node name="UpArrow2" type="Node2D" parent="Puzzle"]
position = Vector2(-27, -42)

[node name="Arrow" type="Sprite2D" parent="Puzzle/UpArrow2"]
position = Vector2(76, 77)
scale = Vector2(0.43, 0.43)
texture = ExtResource("2_hplql")

[node name="Up2" type="Button" parent="Puzzle/UpArrow2"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
offset_left = 130.0
offset_top = 56.0
offset_right = 201.0
offset_bottom = 93.0
metadata/_edit_use_anchors_ = true

[node name="UpArrow3" type="Node2D" parent="Puzzle"]
position = Vector2(-27, -42)

[node name="Arrow" type="Sprite2D" parent="Puzzle/UpArrow3"]
position = Vector2(163, 76)
scale = Vector2(0.43, 0.43)
texture = ExtResource("2_hplql")

[node name="Up3" type="Button" parent="Puzzle/UpArrow3"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
offset_left = 220.0
offset_top = 56.0
offset_right = 291.0
offset_bottom = 93.0
metadata/_edit_use_anchors_ = true

[node name="DownArrow1" type="Node2D" parent="Puzzle"]
position = Vector2(-27, -25)

[node name="Arrow" type="Sprite2D" parent="Puzzle/DownArrow1"]
position = Vector2(257, 193.00002)
rotation = 3.1415927
scale = Vector2(0.43, 0.43)
texture = ExtResource("2_hplql")

[node name="Down1" type="Button" parent="Puzzle/DownArrow1"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
offset_left = 43.0
offset_top = 179.0
offset_right = 114.0
offset_bottom = 216.0
metadata/_edit_use_anchors_ = true

[node name="DownArrow2" type="Node2D" parent="Puzzle"]
position = Vector2(-27, -25)

[node name="Arrow" type="Sprite2D" parent="Puzzle/DownArrow2"]
position = Vector2(163, 195.99998)
rotation = 3.1415927
scale = Vector2(0.43, 0.43)
texture = ExtResource("2_hplql")

[node name="Down2" type="Button" parent="Puzzle/DownArrow2"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
offset_left = 126.0
offset_top = 180.0
offset_right = 197.0
offset_bottom = 217.0
metadata/_edit_use_anchors_ = true

[node name="DownArrow3" type="Node2D" parent="Puzzle"]
position = Vector2(-27, -25)

[node name="Arrow" type="Sprite2D" parent="Puzzle/DownArrow3"]
position = Vector2(79.99999, 194.99998)
rotation = 3.1415927
scale = Vector2(0.43, 0.43)
texture = ExtResource("2_hplql")

[node name="Down3" type="Button" parent="Puzzle/DownArrow3"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
offset_left = 222.0
offset_top = 178.0
offset_right = 293.0
offset_bottom = 215.0
metadata/_edit_use_anchors_ = true

[node name="Number1" type="AnimatedSprite2D" parent="Puzzle"]
position = Vector2(50.000008, 104.000015)
scale = Vector2(0.50750005, 0.50750005)
sprite_frames = SubResource("SpriteFrames_r8x2f")

[node name="Number2" type="AnimatedSprite2D" parent="Puzzle"]
position = Vector2(133, 107.00001)
scale = Vector2(0.50750005, 0.50750005)
sprite_frames = SubResource("SpriteFrames_r8x2f")

[node name="Number3" type="AnimatedSprite2D" parent="Puzzle"]
position = Vector2(222, 107.00001)
scale = Vector2(0.50750005, 0.50750005)
sprite_frames = SubResource("SpriteFrames_r8x2f")

[node name="Check" type="Node2D" parent="Puzzle"]

[node name="Check2" type="Sprite2D" parent="Puzzle/Check"]
position = Vector2(282, 205)
scale = Vector2(0.29999998, 0.29999998)
texture = ExtResource("14_chhh8")

[node name="CheckButton" type="Button" parent="Puzzle/Check"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
offset_left = 267.0
offset_top = 180.0
offset_right = 312.0
offset_bottom = 230.0

[node name="Wrong" type="Node2D" parent="."]
visible = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Wrong"]
position = Vector2(160, 117)
sprite_frames = SubResource("SpriteFrames_w4yjk")
autoplay = "default"
frame = 1
frame_progress = 0.6991654

[connection signal="pressed" from="Puzzle/UpArrow1/Up1" to="." method="_on_up_1_pressed"]
[connection signal="pressed" from="Puzzle/UpArrow2/Up2" to="." method="_on_up_2_pressed"]
[connection signal="pressed" from="Puzzle/UpArrow3/Up3" to="." method="_on_up_3_pressed"]
[connection signal="pressed" from="Puzzle/DownArrow1/Down1" to="." method="_on_down_1_pressed"]
[connection signal="pressed" from="Puzzle/DownArrow2/Down2" to="." method="_on_down_2_pressed"]
[connection signal="pressed" from="Puzzle/DownArrow3/Down3" to="." method="_on_down_3_pressed"]
[connection signal="pressed" from="Puzzle/Check/CheckButton" to="." method="_on_check_button_pressed"]
